--- a/config.yml
+++ b/config.yml
@@ -8,8 +8,13 @@ splits:
   neulab:     "Splits/neulab_valid_set.csv"
   pubmed:     "Splits/pubmed_valid_set.csv"
 
-batch_size: 32
+batch_size: 8
 max_epochs: 100
 device: "cuda"
 patience: 5 # early stopping patience  
 
+distill:
+  temperature: 2.0
+  alpha: 0.7        # weight on KD loss
+  use_rep: false    # toggle representation loss
+  rep_beta: 0.1
