--- a/config.yml
+++ b/config.yml
@@ -12,11 +12,11 @@ batch_size: 6
 max_epochs: 100
 device: "cuda"
 patience: 10 # early stopping patience  
-inner_lr: 3e-4
-meta_lr: 1e-4
+inner_lr: 1e-4  # 3e-4 be4
+meta_lr: 3e-5 # 1e-4
 
 distill:
-  temperature: 2.0
-  alpha: 0.3        # weight on KD loss
+  temperature: 4.0
+  alpha: 0.5        # weight on KD loss
   use_rep: false    # toggle representation loss
   rep_beta: 0.1
