add bleu evaluation and fix model cloning

--- a/config.yml
+++ b/config.yml
@@ -12,8 +12,8 @@ batch_size: 6
 max_epochs: 100
 device: "cuda"
 patience: 10 # early stopping patience  
-inner_lr: 1e-4  # 3e-4 be4
-meta_lr: 3e-5 # 1e-4
+inner_lr: 1e-4  # 1e-4 be4
+meta_lr: 3e-5 # 1e-5 be4
 
 distill:
   temperature: 4.0
